# CT-Performance

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  a.txt  cmake_install.cmake  rawbuild.sh
Projection/: A.ppm  A2x2.txt  A_.ppm  CMakeCache.txt  CMakeLists.txt  Makefile  a.txt  cmake_install.cmake  paramtest  paramtest2.bkup  projection
Projection/include/: Image.h  ProjectionParameters.h  Scanner.h
Projection/src/: Image.cpp  ProjectionParameters.cpp  Scanner.cpp  paramtest.bkup  paramtest.cpp  projection.cpp
include/: Scanner.h
output/: sino_unit_disc_E001_256.ppm  sino_unit_disc_E003_128.ppm  sino_unit_disc_E003_512.ppm
sart_output/: sart_phantom_256_360_0.ppm  sart_phantom_256_360_1.ppm  sart_phantom_256_360_10.ppm  sart_phantom_256_360_11.ppm  sart_phantom_256_360_12.ppm  sart_phantom_256_360_13.ppm  sart_phantom_256_360_14.ppm  sart_phantom_256_360_15.ppm  sart_phantom_256_360_16.ppm  sart_phantom_256_360_17.ppm  sart_phantom_256_360_18.ppm  sart_phantom_256_360_19.ppm  sart_phantom_256_360_2.ppm  sart_phantom_256_360_20.ppm  sart_phantom_256_360_21.ppm  sart_phantom_256_360_22.ppm  sart_phantom_256_360_23.ppm  sart_phantom_256_360_24.ppm  sart_phantom_256_360_3.ppm  sart_phantom_256_360_4.ppm  sart_phantom_256_360_5.ppm  sart_phantom_256_360_6.ppm  sart_phantom_256_360_7.ppm  sart_phantom_256_360_8.ppm  sart_phantom_256_360_9.ppm
src/: Scanner.cpp  Scanner.cu  main.cpp  main.cu
